--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "attila",
   "description": "Ghost Theme",
-  "demo": "http://attila.zutrinken.com",
   "version": "1.7.6",
   "engines": {
     "ghost": ">=2.1.0"
@@ -33,16 +32,11 @@
     "url": "https://github.com/zutrinken/attila.git"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^2.1.0",
-    "grunt-zip": "^0.18.1",
-    "load-grunt-tasks": "^3.5.2"
+    "browser-sync": "^2.26.5",
+    "gulp": "^4.0.1",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5"
   },
   "config": {
     "posts_per_page": 10
